...

    <string name="optional">Optional</string>
    <string name="skip">Skip</string>

    <string name="md610_photometer">MD 610 Photometer</string>
...
    <string name="incorrect_test_selected">Incorrect test selected</string>
    <string name="select_test"><![CDATA[Select <b>%1$s</b> test on MD610]]></string>
    <string name="test_selected">Test Selected</string>
    <string name="to_select_test">Selecting the test</string>
    <string name="test_instructions">Test Instructions</string>

    <string name="select_test_instruction"><![CDATA[Press and hold (*shift*) + <b>%1$s</b> to select <b>%2$s</b> test and then press (*enter*)]]></string>
    <string name="select_diff_test_instruction"><![CDATA[Press and hold (*shift*) + <b>%1$s</b> to select <b>%2$s</b> test and press (*enter*). Select <b>\'diff\'</b> and then press (*enter*)]]></string>
    <string name="select_free_test_instruction"><![CDATA[Press and hold (*shift*) + <b>%1$s</b> to select <b>%2$s</b> test and press (*enter*). Select <b>\'free\'</b> and then press (*enter*)]]></string>
...
    <string name="fill_vial_16_with_10ml_sample_b">Fill the vial (16 mm Ø) with <b>10 ml of water sample</b>.</string>
    <string name="fill_2nd_vial_16_with_10ml_sample">Fill a second clean vial (16 mm Ø) with <b>10 ml of the water sample</b>.</string>
    <string name="fill_vial_24_with_10ml_sample_zero_a">Rinse a vial (24 mm Ø) with the water sample.</string>
    <string name="fill_vial_24_with_10ml_sample_zero_b">Fill the vial (24 mm Ø) with <b>10 ml of your sample</b>.</string>
    <string name="fill_vial_24_with_10ml_sample_zero_c">Wipe the outside of the vial, hold vial at the lid, place vial in the chamber and align arrow marks.</string>
...
    <string name="add_water_till_10ml">Add water sample to the 10 ml mark in the vial</string>
    <string name="add_sample_exact">Add <b>exactly %sampleQuantity ml of the water sample</b> to the prepared vial. <b>Caution: Vial is filled up to the top!</b></string>
    <string name="remove_vial">Remove the vial from the sample chamber.</string>
    <string name="remove_vial_leave_drops">Remove the vial from the sample chamber and <b>empty it, leaving a few drops remaining in the vial</b>.</string>
    <string name="remove_vial_empty">Remove the vial from the sample chamber and <b>empty the vial</b></string>
...
    <string name="add_reagent_2_liquid">Fill the vial with drops of the same size by holding the bottle vertically and squeeze slowly: <b>%reagent2</b></string>
    <string name="add_reagent_3_liquid">Fill the vial with drops of the same size by holding the bottle vertically and squeeze slowly: <b>%reagent3</b></string>
    <string name="add_reagent_1_liquid_exact_ml">Add <b>exactly %reagent1 reagent solution</b> to the water sample. <b>(Caution: Vial is filled up to the top!)</b></string>
    <string name="fill_nitrate_test_tube">Fill the Nitrate test tube with <b>20 ml of the water sample</b>.</string>
    <string name="add_spoon_nitrate_test_powder">Add <b>one level spoon of %reagent1 powder</b>.</string>
    <string name="add_spoon_cyanide_1">Add <b>two level spoons No. 4 (white) of Cyanide-11</b> into the prepared water sample</string>
    <string name="add_spoon_cyanide_2">Add <b>two level spoons No. 4 (white) of Cyanide-12</b> into the prepared water sample</string>
    <string name="close_swirl_mix">Close the vial tightly with the cap and swirl several times to mix the contents</string>
    <string name="close_swirl_gently">Close the vial tightly with the cap and swirl gently several times.</string>
    <string name="close_swirl_mix_purple">Close the vial tightly with the cap and swirl several times to mix the contents. Wait until <font color="#2C2A74">purple coloration</font> goes before continuing.</string>
...
    <string name="wipe_place_align_vial_wait_1_b">Hold vial at the lid, place vial in the chamber and align arrow marks.</string>
    <string name="wipe_place_align_vial_wait_1_c">Press (*test*) and wait for a <b>reaction time of %reactionTime1</b>.</string>
    <string name="wipe_place_align_vial_wait_2_a">Wipe the outside of the vial.</string>
    <string name="wipe_place_align_vial_wait_2_b">Hold vial at the lid and place vial in the chamber and align arrow marks.</string>
    <string name="wipe_place_align_vial_wait_2_c">Press (*test*) and wait for a <b>reaction time of %reactionTime2</b>.</string>
...
