...
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <!--Common-->
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="error">Error</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
...
    <string name="required">Required</string>
    <string name="survey">Survey</string>
    <string name="success" tools:ignore="UnusedResources">Success</string>
    <string name="done" tools:ignore="UnusedResources">Done</string>
    <string name="close">Close</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="navigate_up">Navigate up</string>
    <string name="logo">Logo</string>

    <string name="result">Result</string>
    <string name="language">Language</string>
    <string name="notSupported">Not Supported</string>

    <string name="stage_one"><b>Stage 1:</b></string>
    <string name="stage_two"><b>Stage 2:</b></string>
    <string name="us_cm">μS/cm</string>
...

    <!--Sensor-->
    <string name="deviceConnectSensor">Connect sensor</string>
    <string name="celsius">°Celsius</string>
    <string name="dipSensorInSample">Dip sensor in sample</string>

    <string name="selectTest">Select Test</string>
    <string name="awaitingResult">Awaiting result</string>

    <string name="deviceConnected">Device connected</string>
    <string name="unableToConnect">Could not connect. Try connecting again.</string>
    <string name="sensorDetails">Sensor Details</string>
    <string name="enterAnIdForSensor">Enter an Id for this sensor</string>
...
    <string name="install_external_app">Please install the Akvo Flow app from your instance.</string>

    <!--Bluetooth-->
    <string name="nearby_devices">Nearby devices</string>
    <string name="connect_device">Connect to your device</string>
    <string name="to_turn_bluetooth_on">To turn bluetooth on:</string>
    <string name="connect">Connect</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="location_permission">Location permission is required for bluetooth connection</string>
    <string name="turn_location_on">To continue, turn on device location. Required for bluetooth connection</string>
    <string name="unknown_device">Unknown</string>
    <string name="scanning">Scanning for MD610 photometer…</string>

    <!--About Screen-->
...
