...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutResult1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="#555"
                android:textSize="20sp"
...
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="3dp"
                    android:textColor="#444"
                    android:textSize="17sp"
                    tools:text="mg/l" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ddd" />
...

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_submit_result"
        style="@style/ActionButton"
        android:layout_above="@id/textEndInstruction"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/result_top_margin"
        android:layout_marginBottom="10dp"
...
